# ParkSence

./: .gitignore  README.md  main.py  pyproject.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: bg_header_bar.xml  bg_input_field.xml  bg_scan_button.xml  bg_sign_chip.xml  bg_vehicle_selected.xml  bg_vehicle_unselected.xml  bg_verdict_can.xml  bg_verdict_cannot.xml  bg_verdict_unknown.xml  ic_launcher_foreground.xml
core/: detector.py
ios/: ParkSenceApp.swift  ParkSenseApp.swift
ios/Auth/: LoginView.swift  ProfileView.swift  RegisterView.swift  UserSession.swift
ios/Classifier/: SignExplainer.swift
ios/ParkSence/ParkSence/: Info.plist  MainView.swift  ParkSenceApp.swift  ParkSenseApp.swift
ios/ParkSence/ParkSence.xcodeproj/: project.pbxproj
ios/ParkSence/ParkSence/API/: ApiClient.swift
ios/ParkSence/ParkSence/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/ParkSence/ParkSence/Auth/: LoginView.swift  ProfileView.swift  RegisterView.swift  UserSession.swift
ios/ParkSence/ParkSence/Camera/: CameraPreviewView.swift  CameraSession.swift
ios/ParkSence/ParkSence/Classifier/: SignClassifier.swift
ios/ParkSence/ParkSence/Detection/: ColorDetector.swift
ios/ParkSence/ParkSence/Parser/: ParkingParser.swift
ios/ParkSence/ParkSence/UI/: DesignSystem.swift  ScanOverlayView.swift  VerdictCard.swift
server/: analyzer.py  auth.py  database.py  main.py  models.py  parksence.db  pyproject.toml  requirements.txt  start.sh
(+21 files in other folders)
