[project]
name = "parksense"
version = "0.1.0"
description = "Scan a Swedish parking sign to know if you can park"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clip @ git+https://github.com/openai/CLIP.git",
    "easyocr>=1.7.2",
    "transformers>=4.49",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "streamlit>=1.55.0",
    "ultralytics>=8.4.21",
    "watchdog>=6.0.0",
    "email-validator>=2.3.0",
    "torch>=2.10.0",
    "accelerate>=1.13.0",
]

[tool.uv.workspace]
members = [
    "server",
]
